@@ -4,22 +4,24 @@ import com.google.common.collect.ImmutableList;
 import dev.flashlabs.cratecrate.CrateCrate;
 import dev.flashlabs.cratecrate.component.Type;
 import dev.flashlabs.cratecrate.internal.Config;
+import dev.flashlabs.cratecrate.internal.SerializationException;
 import dev.flashlabs.cratecrate.internal.Serializers;
-import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
-import org.spongepowered.api.ResourceKey;
-import org.spongepowered.api.data.Keys;
+import ninja.leaping.configurate.ConfigurationNode;
+import org.spongepowered.api.Sponge;
+import org.spongepowered.api.data.key.Keys;
 import org.spongepowered.api.entity.living.player.User;
+import org.spongepowered.api.item.ItemType;
 import org.spongepowered.api.item.inventory.ItemStack;
 import org.spongepowered.api.item.inventory.ItemStackSnapshot;
 import org.spongepowered.api.item.inventory.transaction.InventoryTransactionResult;
-import org.spongepowered.api.registry.RegistryTypes;
+import org.spongepowered.api.text.Text;
+import org.spongepowered.api.text.serializer.TextSerializers;
 import org.spongepowered.api.util.Tuple;
-import org.spongepowered.configurate.ConfigurationNode;
-import org.spongepowered.configurate.serialize.SerializationException;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 public final class ItemPrize extends Prize<Integer> {
 
@@ -49,9 +51,11 @@ public final class ItemPrize extends Prize<Integer> {
      * is given, it is appended to the name in the form {@code (x#)}.
      */
     @Override
-    public net.kyori.adventure.text.Component name(Optional<Integer> quantity) {
-        return LegacyComponentSerializer.legacyAmpersand().deserialize(name.orElse(id))
-            .append(Component.text(quantity.map(q -> " (x" + q + ")").orElse("")));
+    public Text name(Optional<Integer> quantity) {
+        return Text.of(
+            TextSerializers.FORMATTING_CODE.deserialize(name.orElse(id)),
+            quantity.map(q -> " (x" + q + ")").orElse("")
+        );
     }
 
     /**
@@ -59,10 +63,10 @@ public final class ItemPrize extends Prize<Integer> {
      * value is currently unused.
      */
     @Override
-    public List<net.kyori.adventure.text.Component> lore(Optional<Integer> unused) {
-        return lore.orElseGet(ImmutableList::of).stream()
-            .map(s -> LegacyComponentSerializer.legacyAmpersand().deserialize(s).asComponent())
-            .toList();
+    public List<Text> lore(Optional<Integer> unused) {
+        return lore.orElse(ImmutableList.of()).stream()
+            .map(TextSerializers.FORMATTING_CODE::deserialize)
+            .collect(Collectors.toList());
     }
 
     /**
@@ -74,28 +78,28 @@ public final class ItemPrize extends Prize<Integer> {
      */
     @Override
     public ItemStack icon(Optional<Integer> quantity) {
-        var base = icon.map(ItemStackSnapshot::createStack)
+        ItemStack base = icon.map(ItemStackSnapshot::createStack)
             .orElseGet(item::createStack);
-        if (base.get(Keys.CUSTOM_NAME).isEmpty()) {
-            base.offer(Keys.CUSTOM_NAME, name(quantity.filter(q -> q > base.maxStackQuantity())));
+        if (!base.get(Keys.DISPLAY_NAME).isPresent()) {
+            base.offer(Keys.DISPLAY_NAME, name(quantity.filter(q -> q > base.getMaxStackQuantity())));
         }
-        if (lore.isPresent() && base.get(Keys.LORE).isEmpty()) {
-            base.offer(Keys.LORE, lore(Optional.empty()));
+        if (lore.isPresent() && !base.get(Keys.ITEM_LORE).isPresent()) {
+            base.offer(Keys.ITEM_LORE, lore(Optional.empty()));
         }
-        base.setQuantity(quantity.filter(q -> q <= base.maxStackQuantity()).orElse(1));
+        base.setQuantity(quantity.filter(q -> q <= base.getMaxStackQuantity()).orElse(1));
         return base;
     }
 
     @Override
     public boolean give(User user, Integer quantity) {
-        var result = user.inventory().offer(ItemStack.builder()
+        InventoryTransactionResult result = user.getInventory().offer(ItemStack.builder()
             .fromSnapshot(item)
             .quantity(quantity)
             .build());
-        if (result.type() == InventoryTransactionResult.Type.SUCCESS) {
+        if (result.getType() == InventoryTransactionResult.Type.SUCCESS) {
             return true;
         } else {
-            CrateCrate.container().logger().error("Failed to give item: " + result.type().name());
+            CrateCrate.getContainer().getLogger().error("Failed to give item: " + result.getType().name());
             return false;
         }
     }
@@ -103,7 +107,7 @@ public final class ItemPrize extends Prize<Integer> {
     private static final class ItemPrizeType extends Type<ItemPrize, Integer> {
 
         private ItemPrizeType() {
-            super("Item", CrateCrate.container());
+            super("Item", CrateCrate.getContainer());
         }
 
         /**
@@ -112,16 +116,15 @@ public final class ItemPrize extends Prize<Integer> {
          */
         @Override
         public boolean matches(ConfigurationNode node) {
-            return node.hasChild("item") || Optional.ofNullable(node.getString())
-                .map(s -> {
-                    //TODO: Consider validating ResourceKey format via regex
-                    try {
-                        return RegistryTypes.ITEM_TYPE.get().findValue(ResourceKey.resolve(s)).isPresent();
-                    } catch (Exception ignored) {
-                        return false;
-                    }
-                })
-                .orElse(false);
+            if (!node.getNode("item").isVirtual()) {
+                return true;
+            }
+            try {
+                Serializers.ITEM_TYPE.deserialize(node);
+                return true;
+            } catch (Exception ignored) {
+                return false;
+            }
         }
 
         /**
@@ -137,15 +140,18 @@ public final class ItemPrize extends Prize<Integer> {
          */
         @Override
         public ItemPrize deserializeComponent(ConfigurationNode node) throws SerializationException {
-            var name = Optional.ofNullable(node.node("name").get(String.class));
-            var lore = node.node("lore").isList()
-                ? Optional.ofNullable(node.node("lore").getList(String.class)).map(ImmutableList::copyOf)
-                : Optional.<ImmutableList<String>>empty();
-            var icon = node.hasChild("icon")
-                ? Optional.of(Serializers.ITEM_STACK.deserialize(node.node("icon")).createSnapshot())
-                : Optional.<ItemStackSnapshot>empty();
-            var item = Serializers.ITEM_STACK.deserialize(node.node("item")).createSnapshot();
-            return new ItemPrize(String.valueOf(node.key()), name, lore, icon, item);
+            Optional<String> name = Optional.ofNullable(node.getNode("name").getString());
+            Optional<ImmutableList<String>> lore = node.getNode("lore").isList()
+                ? Optional.of(node.getChildrenList().stream()
+                    .map(s -> s.getString(""))
+                    .collect(ImmutableList.toImmutableList())
+                )
+                : Optional.empty();
+            Optional<ItemStackSnapshot> icon = !node.getNode("icon").isVirtual()
+                ? Optional.of(Serializers.ITEM_STACK.deserialize(node.getNode("icon")).createSnapshot())
+                : Optional.empty();
+            ItemStackSnapshot item = Serializers.ITEM_STACK.deserialize(node.getNode("item")).createSnapshot();
+            return new ItemPrize(String.valueOf(node.getKey()), name, lore, icon, item);
         }
 
         @Override
@@ -171,21 +177,20 @@ public final class ItemPrize extends Prize<Integer> {
             ItemPrize prize;
             if (node.isMap()) {
                 prize = deserializeComponent(node);
-                prize = new ItemPrize("ItemPrize@" + node.path(), prize.name, prize.lore, prize.icon, prize.item);
+                prize = new ItemPrize("ItemPrize@" + Arrays.toString(node.getPath()), prize.name, prize.lore, prize.icon, prize.item);
                 Config.PRIZES.put(prize.id, prize);
             } else {
-                var identifier = Optional.ofNullable(node.getString()).orElse("");
+                String identifier = node.getString("");
                 if (Config.PRIZES.containsKey(identifier)) {
                     prize = (ItemPrize) Config.PRIZES.get(identifier);
                 } else {
-                    var item = ItemStack.of(RegistryTypes.ITEM_TYPE.get().findValue(ResourceKey.resolve(identifier))
-                        .orElseThrow(AssertionError::new)).createSnapshot();
+                    ItemStackSnapshot item = Serializers.ITEM_TYPE.deserialize(node).createSnapshot();
                     prize = new ItemPrize(identifier, Optional.empty(), Optional.empty(), Optional.empty(), item);
                     Config.PRIZES.put(prize.id, prize);
                 }
             }
             //TODO: Validate reference value counts
-            var quantity = (!values.isEmpty() ? values.get(0) : node.node("quantity")).getInt(1);
+            int quantity = (!values.isEmpty() ? values.get(0) : node.getNode("quantity")).getInt(1);
             return Tuple.of(prize, quantity);
         }
 
