@@ -4,26 +4,27 @@ import com.google.common.collect.ImmutableList;
 import dev.flashlabs.cratecrate.CrateCrate;
 import dev.flashlabs.cratecrate.component.Type;
 import dev.flashlabs.cratecrate.internal.Config;
+import dev.flashlabs.cratecrate.internal.SerializationException;
 import dev.flashlabs.cratecrate.internal.Serializers;
-import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
-import org.spongepowered.api.ResourceKey;
+import ninja.leaping.configurate.ConfigurationNode;
 import org.spongepowered.api.Sponge;
-import org.spongepowered.api.data.Keys;
+import org.spongepowered.api.data.key.Keys;
+import org.spongepowered.api.data.type.DoublePlantTypes;
 import org.spongepowered.api.entity.living.player.User;
 import org.spongepowered.api.item.ItemTypes;
 import org.spongepowered.api.item.inventory.ItemStack;
 import org.spongepowered.api.item.inventory.ItemStackSnapshot;
-import org.spongepowered.api.registry.RegistryTypes;
 import org.spongepowered.api.service.economy.Currency;
+import org.spongepowered.api.service.economy.EconomyService;
 import org.spongepowered.api.service.economy.transaction.ResultType;
+import org.spongepowered.api.service.economy.transaction.TransactionResult;
+import org.spongepowered.api.text.Text;
+import org.spongepowered.api.text.serializer.TextSerializers;
 import org.spongepowered.api.util.Tuple;
-import org.spongepowered.configurate.ConfigurationNode;
-import org.spongepowered.configurate.serialize.SerializationException;
 
 import java.math.BigDecimal;
+import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -58,14 +59,16 @@ public final class MoneyPrize extends Prize<BigDecimal> {
      * default amount.
      */
     @Override
-    public Component name(Optional<BigDecimal> amount) {
-        return name.map(s -> {
-            s = s.replaceAll("\\$\\{amount}", amount.map(String::valueOf).orElse("${amount}"));
-            return LegacyComponentSerializer.legacyAmpersand().deserialize(s).asComponent();
-        }).orElseGet(() -> {
-            var service = Sponge.server().serviceProvider().economyService().get();
-            return currency.orElse(service.defaultCurrency()).format(amount.orElse(BigDecimal.ZERO));
-        });
+    public Text name(Optional<BigDecimal> amount) {
+        return name
+            .map(s -> {
+                s = s.replaceAll("\\$\\{amount}", amount.map(String::valueOf).orElse("${amount}"));
+                return TextSerializers.FORMATTING_CODE.deserialize(s);
+            })
+            .orElseGet(() -> currency
+                .orElse(Sponge.getServiceManager().provideUnchecked(EconomyService.class).getDefaultCurrency())
+                .format(amount.orElse(BigDecimal.ZERO))
+            );
     }
 
     /**
@@ -73,11 +76,13 @@ public final class MoneyPrize extends Prize<BigDecimal> {
      * reference value is given, it replaces {@code ${amount}}.
      */
     @Override
-    public List<Component> lore(Optional<BigDecimal> amount) {
-        return lore.orElseGet(ImmutableList::of).stream().map(s -> {
-            s = s.replaceAll("\\$\\{amount}", amount.map(String::valueOf).orElse("${amount}"));
-            return LegacyComponentSerializer.legacyAmpersand().deserialize(s).asComponent();
-        }).toList();
+    public List<Text> lore(Optional<BigDecimal> amount) {
+        return lore.orElse(ImmutableList.of()).stream()
+            .map(s -> {
+                s = s.replaceAll("\\$\\{amount}", amount.map(String::valueOf).orElse("${amount}"));
+                return TextSerializers.FORMATTING_CODE.deserialize(s);
+            })
+            .collect(Collectors.toList());
     }
 
     /**
@@ -87,33 +92,36 @@ public final class MoneyPrize extends Prize<BigDecimal> {
      */
     @Override
     public ItemStack icon(Optional<BigDecimal> value) {
-        var base = icon.map(ItemStackSnapshot::createStack)
-            .orElseGet(() -> ItemStack.of(ItemTypes.SUNFLOWER, 1));
-        if (base.get(Keys.CUSTOM_NAME).isEmpty()) {
-            base.offer(Keys.CUSTOM_NAME, name(value));
+        ItemStack base = icon.map(ItemStackSnapshot::createStack)
+            .orElseGet(() -> ItemStack.builder()
+                .itemType(ItemTypes.DOUBLE_PLANT)
+                .add(Keys.DOUBLE_PLANT_TYPE, DoublePlantTypes.SUNFLOWER)
+                .build()
+            );
+        if (!base.get(Keys.DISPLAY_NAME).isPresent()) {
+            base.offer(Keys.DISPLAY_NAME, name(value));
         }
-        if (lore.isPresent() && base.get(Keys.LORE).isEmpty()) {
-            base.offer(Keys.LORE, lore(value));
+        if (lore.isPresent() && !base.get(Keys.ITEM_LORE).isPresent()) {
+            base.offer(Keys.ITEM_LORE, lore(value));
         }
         return base;
     }
 
     @Override
     public boolean give(User user, BigDecimal amount) {
-        var service = Sponge.server().serviceProvider().economyService().get();
-        var account = service.findOrCreateAccount(user.uniqueId()).orElse(null);
-        if (account != null) {
-            var result = account.deposit(currency.orElse(service.defaultCurrency()), amount);
-            return result.result() == ResultType.SUCCESS;
-        } else {
-            return false;
-        }
+        EconomyService service = Sponge.getServiceManager().provideUnchecked(EconomyService.class);
+        return service.getOrCreateAccount(user.getUniqueId())
+            .map(a -> {
+                TransactionResult result = a.deposit(currency.orElse(service.getDefaultCurrency()), amount, Sponge.getCauseStackManager().getCurrentCause());
+                return result.getResult() == ResultType.SUCCESS;
+            })
+            .orElse(false);
     }
 
     private static final class MoneyPrizeType extends Type<MoneyPrize, BigDecimal> {
 
         private MoneyPrizeType() {
-            super("Money", CrateCrate.container());
+            super("Money", CrateCrate.getContainer());
         }
 
         /**
@@ -122,7 +130,7 @@ public final class MoneyPrize extends Prize<BigDecimal> {
          */
         @Override
         public boolean matches(ConfigurationNode node) {
-            return node.hasChild("money") || Optional.ofNullable(node.getString())
+            return !node.getNode("money").isVirtual() || Optional.ofNullable(node.getString())
                 .map(s -> s.startsWith("$"))
                 .orElse(false);
         }
@@ -141,17 +149,20 @@ public final class MoneyPrize extends Prize<BigDecimal> {
          */
         @Override
         public MoneyPrize deserializeComponent(ConfigurationNode node) throws SerializationException {
-            var name = Optional.ofNullable(node.node("name").get(String.class));
-            var lore = node.node("lore").isList()
-                ? Optional.ofNullable(node.node("lore").getList(String.class)).map(ImmutableList::copyOf)
-                : Optional.<ImmutableList<String>>empty();
-            var icon = node.hasChild("icon")
-                ? Optional.of(Serializers.ITEM_STACK.deserialize(node.node("icon")).createSnapshot())
-                : Optional.<ItemStackSnapshot>empty();
-            var currency = node.hasChild("money", "currency")
-                ? Optional.of(Serializers.CURRENCY.deserialize(node.node("money", "currency")))
-                : Optional.<Currency>empty();
-            return new MoneyPrize(String.valueOf(node.key()), name, lore, icon, currency);
+            Optional<String> name = Optional.ofNullable(node.getNode("name").getString());
+            Optional<ImmutableList<String>> lore = node.getNode("lore").isList()
+                ? Optional.of(node.getChildrenList().stream()
+                    .map(s -> s.getString(""))
+                    .collect(ImmutableList.toImmutableList())
+                )
+                : Optional.empty();
+            Optional<ItemStackSnapshot> icon = !node.getNode("icon").isVirtual()
+                ? Optional.of(Serializers.ITEM_STACK.deserialize(node.getNode("icon")).createSnapshot())
+                : Optional.empty();
+            Optional<Currency> currency = !node.getNode("money", "currency").isVirtual()
+                ? Optional.of(Serializers.CURRENCY.deserialize(node.getNode("money", "currency")))
+                : Optional.empty();
+            return new MoneyPrize(String.valueOf(node.getKey()), name, lore, icon, currency);
         }
 
         @Override
@@ -177,26 +188,25 @@ public final class MoneyPrize extends Prize<BigDecimal> {
             MoneyPrize prize;
             if (node.isMap()) {
                 prize = deserializeComponent(node);
-                prize = new MoneyPrize("MoneyPrize@" + node.path(), prize.name, prize.lore, prize.icon, prize.currency);
+                prize = new MoneyPrize("MoneyPrize@" + Arrays.toString(node.getPath()), prize.name, prize.lore, prize.icon, prize.currency);
                 Config.PRIZES.put(prize.id, prize);
             } else {
-                var identifier = Optional.ofNullable(node.getString()).orElse("");
+                String identifier = Optional.ofNullable(node.getString()).orElse("");
                 if (Config.PRIZES.containsKey(identifier)) {
                     prize = (MoneyPrize) Config.PRIZES.get(identifier);
                 } else if (identifier.matches("\\$[0-9]+(\\.[0-9]+)?")) {
                     prize = (MoneyPrize) Config.PRIZES.computeIfAbsent("$", k -> new MoneyPrize(k, Optional.empty(), Optional.empty(), Optional.empty(), Optional.empty()));
                     return Tuple.of(prize, new BigDecimal(identifier.substring(1)));
                 } else if (identifier.startsWith("$")) {
-                    //TODO: Currency registry is empty and not accessible via EconomyService
-                    var currency = RegistryTypes.CURRENCY.get().findValue(ResourceKey.resolve(identifier.substring(1))).get();
-                    prize = new MoneyPrize(identifier, Optional.empty(), Optional.empty(), Optional.empty(), Optional.of(currency));
+                    Optional<Currency> currency = Sponge.getRegistry().getType(Currency.class, identifier.contains(":") ? identifier.substring(1) : "minecraft:" + identifier.substring(1));
+                    prize = new MoneyPrize(identifier, Optional.empty(), Optional.empty(), Optional.empty(), currency);
                     Config.PRIZES.put(prize.id, prize);
                 } else {
                     throw new AssertionError(identifier);
                 }
             }
             //TODO: Validate reference value counts
-            var amount = new BigDecimal((!values.isEmpty() ? values.get(0) : node.node("amount")).getString("0"));
+            BigDecimal amount = new BigDecimal((!values.isEmpty() ? values.get(0) : node.getNode("amount")).getString("0"));
             return Tuple.of(prize, amount);
         }
 
